# ora-schema-snapshot

./: .gitignore  PROJECT_CONTEXT.md  README.md  pyproject.toml
.serena/cache/python/: document_symbols.pkl  raw_document_symbols.pkl
.sisyphus/drafts/: ora-schema-snapshot-ops-runbook.md  project-analysis.md
.sisyphus/plans/: ora-schema-snapshot-improvements.md
config/: snapshot.example.yml  snapshot.yml
docs/plans/: oracle-schema-snapshot-implementation-plan-ko.md
docs/sql/: PRE_INSTALL.sql
src/ora_schema_snapshot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/orasnap/: __init__.py  __main__.py  cli.py  config.py  models.py  pipeline.py
src/orasnap/normalize/: __init__.py  ddl_normalizer.py
src/orasnap/oracle/: __init__.py  audit_exporter.py  extractor.py
src/orasnap/store/: __init__.py  writer.py
src/orasnap/vcs/: __init__.py  git_ops.py
tests/: conftest.py
tests/unit/: test_audit_exporter.py  test_commit_message.py  test_extractor_bulk.py  test_git_ops.py  test_normalizer.py  test_pipeline_audit_state_path.py  test_writer.py
